[package]
name = "gnss-rs"
version = "2.5.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS constellations"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/gnss"
keywords = ["gnss", "gps", "glonass", "galileo"]
categories = ["science", "science::geo"]
edition = "2021"
readme = "README.md"

[features]
# no features enabled by default
default = []

# Enable COSPAR (launch #ID) definition
cospar = []

# Enable DOMES (IGS station ID) number definition.
domes = []

# This feature enables the "sbas_selector" function,
# to select the locally available SBAS service, from ground coordinates.
# This is not the SBAS identification helper which is built in by default.
sbas = ["geo", "wkt"]

# Enable all features at once
full = [
    "cospar",
    "domes",
    "sbas",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[dependencies]
thiserror = "2"
hifitime = "4.1"
lazy_static = "1"
geo = { version = "0.31", optional = true }
wkt = { version = "0.14", default-features = false, optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
