[package]
name = "gnss-rs"
version = "2.6.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS constellations"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/gnss"
keywords = ["gnss", "gps", "glonass", "galileo"]
categories = ["science", "science::geo"]
edition = "2021"
readme = "README.md"

[features]
default = []

# Enable COSPAR (launch #ID) definition
cospar = []

# Enable DOMES (IGS station ID) number definition.
domes = []

# This feature enables the "sbas_selector" function,
# to select the locally available SBAS service, from ground coordinates.
# This is not the SBAS identification helper which is built in by default.
sbas = [
    "dep:geo", 
    "dep:geojson", 
    "dep:bincode", 
    "dep:once_cell", 
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]
hifitime = "4.1"
geojson = { version = "0.24", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
bincode = { version = "2", optional = true }

[dependencies]
thiserror = "2"
hifitime = "4.1"
lazy_static = "1"
geo = { version = "0.31", optional = true }
bincode = { version = "2", optional = true }
once_cell = { version = "1", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
